# email-generator

./: .env.example  .gitignore  AGENT.md  Agent.md  README.md  plan.md  pyproject.toml  review_comments.md
email_generator/: __init__.py  __main__.py  api.py  cli.py  config.py  core.py  errors.py  generator.py  prompt.py  providers.py  schemas.py  web.py
email_generator/templates/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_equivalence.py  test_generator.py  test_main_module.py  test_web.py
