[project]
name = "email-generator"
version = "0.1.0"
description = "Generate email subject lines and plain-text bodies with the OpenAI API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "openai>=1.99.0,<2.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.scripts]
email-generator = "email_generator.cli:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
email_generator = ["templates/*.html"]

[tool.setuptools.packages.find]
include = ["email_generator*"]

[tool.pytest.ini_options]
addopts = "--cov=email_generator --cov-report=term-missing --cov-fail-under=95"
